Integration with API gateway

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,31 @@
 version: "3"
 services:
+  jwk-provider:
+    image: lucas-dev-it/jwk-provider:latest
+    build: ./_integrations_/jwk_provider
+    expose:
+      - 7777
+    environment:
+      PORT: 7777
+      JWK_KEY_SET: ${JWK_KEY_SET}
+    labels:
+      - traefik.enable=true
+      - traefik.http.routers.jwk-provider.rule=Host(`jwk-provider.santander.com`)
+      - traefik.http.services.jwk-provider.loadbalancer.server.port=7777
+
+  api-gateway:
+    image:  lucas-dev-it/krakend:latest
+    build: ./_integrations_/api_gateway
+    expose:
+      - 8080
+    environment:
+      HEADER_API_KEY: ${INTERNAL_API_KEY}
+      HEADER_COUNTRY: 'testing-key-from-secrets-env-vars-country'
+    labels:
+      - traefik.enable=true
+      - traefik.http.routers.api-gateway.rule=Host(`api-gateway.santander.com`)
+      - traefik.http.services.api-gateway.loadbalancer.server.port=8080
+
   meetup:
     image: lucas-dev-it/meetup:latest
     build: .
@@ -57,8 +83,8 @@ services:
     hostname: reverse-proxy
     image: traefik:v2.2
     command:
-    - --api.insecure=true
-    - --providers.docker=true
+      - --api.insecure=true
+      - --providers.docker=true
     ports:
       - "80:80"
       - "8080:8080"
