--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,38 +1,5 @@
 version: "3"
 services:
-#  jwk-provider:
-#    image: lucas-dev-it/jwk-provider:latest
-#    build: ./_integrations_/jwk_provider
-#    hostname: jwk-provider
-#    ports:
-#      - "7777:7777"
-#    environment:
-#      PORT: 7777
-#      JWK_KEY_SET: ${JWK_KEY_SET}
-#    depends_on:
-#      - api-gateway
-#    links:
-#      - api-gateway
-#    restart: unless-stopped
-  #    labels:
-  #      - traefik.enable=true
-  #      - traefik.http.routers.jwk-provider.rule=Path(`/.well-known/jwk.json`)
-  #      - traefik.http.services.jwk-provider.loadbalancer.server.port=7777
-
-#  api-gateway:
-#    container_name: api-gateway
-#    image:  lucas-dev-it/krakend:latest
-#    build: ./_integrations_/api_gateway
-#    expose:
-#      - 8080
-#    environment:
-#      HEADER_API_KEY: ${INTERNAL_API_KEY}
-#      HEADER_COUNTRY: 'testing-key-from-secrets-env-vars-country'
-#    labels:
-#      - traefik.enable=true
-#      - traefik.http.routers.api-gateway.rule=Host(`api-gateway.santander.com`)
-#      - traefik.http.services.api-gateway.loadbalancer.server.port=8080
-
   meetup:
     image: lucas-dev-it/meetup:latest
     build: .
@@ -40,10 +7,8 @@ services:
       - traefik.enable=true
       - traefik.http.routers.meetup.rule=Host(`meetup.santander.com`)
       - traefik.http.services.meetup.loadbalancer.server.port=3999
-#    expose:
-#      - 3999
-    ports:
-    - 3999:3999
+    expose:
+      - 3999
     environment:
       ENVIRONMENT: 'dev'
       PORT: 3999
@@ -53,12 +18,12 @@ services:
       DB_PORT: 5432
       DB_USER: ${DB_USER}
       DB_PASS: ${DB_PASS}
-      DB_NAME: meetup
+      DB_NAME: ${DB_NAME}
       FORECAST_DAYS: 10
       WEATHER_PROVIDER: 'weather-bit'
       WEATHERBIT_API_KEY: ${WEATHERBIT_API_KEY}
       PACK_UNITS: 6
-      INTERNAL_API_KEY: ${INTERNAL_API_KEY}
+      TOKEN_SIGNING_KEY: ${TOKEN_SIGNING_KEY}
     restart: unless-stopped
     depends_on:
       - postgres
@@ -84,6 +49,7 @@ services:
     environment:
       POSTGRES_USER: ${DB_USER}
       POSTGRES_PASSWORD: ${DB_PASS}
+      POSTGRES_DB: ${DB_NAME}
     ports:
       - '5432:5432'
     restart: unless-stopped
